// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Form/Button alignment 1`] = `
.emotion-6 > * {
  margin-top: 10px;
}

.emotion-6 > *:first-child {
  margin-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: right;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-6"
>
  <div
    class="emotion-1"
  >
    <button
      class="emotion-0"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-1"
  >
    <button
      class="emotion-2"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-1"
  >
    <button
      class="emotion-4"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button sizes 1`] = `
.emotion-6 > * {
  margin-top: 10px;
}

.emotion-6 > *:first-child {
  margin-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-6"
>
  <div
    class="emotion-1"
  >
    <button
      class="emotion-0"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-1"
  >
    <button
      class="emotion-2"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-1"
  >
    <button
      class="emotion-4"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button validations 1`] = `
.emotion-8 > * {
  margin-top: 10px;
}

.emotion-8 > *:first-child {
  margin-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-6:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #FF4400;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #FC521F;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #66BF3C;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-8"
>
  <div
    class="emotion-1"
  >
    <button
      class="emotion-0"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-1"
  >
    <button
      class="emotion-2"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-1"
  >
    <button
      class="emotion-4"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-1"
  >
    <button
      class="emotion-6"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Field field 1`] = `
.emotion-2 {
  width: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 8px 0;
  border-bottom: 1px solid rgba(0,0,0,0.1);
  padding: 0 8px 8px 8px;
}

.emotion-2:last-child {
  border-bottom: 0 none;
  padding-bottom: 0;
}

.emotion-0 {
  min-width: 100px;
  min-height: 32px;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.emotion-1 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-1:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<label
  class="emotion-2"
>
  <span
    class="emotion-0"
  >
    <span>
      label
    </span>
  </span>
  <select
    class="emotion-1"
    size="1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</label>
`;

exports[`Storyshots Components|Form/Input alignment 1`] = `
.emotion-6 > * {
  margin-top: 10px;
}

.emotion-6 > *:first-child {
  margin-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: right;
  min-height: 32px;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: center;
  min-height: 32px;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-6"
>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-0"
      value="text"
    />
  </div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-2"
      value="text"
    />
  </div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-4"
      value="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Form/Input sizes 1`] = `
.emotion-6 > * {
  margin-top: 10px;
}

.emotion-6 > *:first-child {
  margin-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  min-height: 32px;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  min-height: 32px;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-6"
>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-0"
      value="text"
    />
  </div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-2"
      value="text"
    />
  </div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-4"
      value="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Form/Input validations 1`] = `
.emotion-8 > * {
  margin-top: 10px;
}

.emotion-8 > *:first-child {
  margin-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
}

.emotion-6:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #FF4400;
  min-height: 32px;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #FC521F;
  min-height: 32px;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #66BF3C;
  min-height: 32px;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-8"
>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-0"
      value="text"
    />
  </div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-2"
      value="text"
    />
  </div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-4"
      value="text"
    />
  </div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-6"
      value="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Form/Select alignment 1`] = `
.emotion-3 > * {
  margin-top: 10px;
}

.emotion-3 > *:first-child {
  margin-top: 0;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: right;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-1 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: center;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-1:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-3"
>
  <select
    class="emotion-0"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="emotion-1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="emotion-2"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</div>
`;

exports[`Storyshots Components|Form/Select sizes 1`] = `
.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-6 > * {
  margin-top: 10px;
}

.emotion-6 > *:first-child {
  margin-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-6"
>
  <div
    class="emotion-1"
  >
    <select
      class="emotion-0"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
  <div
    class="emotion-1"
  >
    <select
      class="emotion-2"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
  <div
    class="emotion-1"
  >
    <select
      class="emotion-4"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Select validations 1`] = `
.emotion-4 > * {
  margin-top: 10px;
}

.emotion-4 > *:first-child {
  margin-top: 0;
}

.emotion-3 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-3:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #FF4400;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-1 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #FC521F;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-1:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #66BF3C;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-4"
>
  <select
    class="emotion-0"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="emotion-1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="emotion-2"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="emotion-3"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</div>
`;

exports[`Storyshots Components|Form/Textarea alignment 1`] = `
.emotion-6 > * {
  margin-top: 10px;
}

.emotion-6 > *:first-child {
  margin-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: right;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: center;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-6"
>
  <div
    class="emotion-1"
  >
    <textarea
      align="end"
      class="emotion-0"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-1"
  >
    <textarea
      align="center"
      class="emotion-2"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-1"
  >
    <textarea
      align="start"
      class="emotion-4"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea sizes 1`] = `
.emotion-6 > * {
  margin-top: 10px;
}

.emotion-6 > *:first-child {
  margin-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-6"
>
  <div
    class="emotion-1"
  >
    <textarea
      class="emotion-0"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-1"
  >
    <textarea
      class="emotion-2"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-1"
  >
    <textarea
      class="emotion-4"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea validations 1`] = `
.emotion-8 > * {
  margin-top: 10px;
}

.emotion-8 > *:first-child {
  margin-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-6:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #FF4400;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #FC521F;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #66BF3C;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<div
  class="emotion-8"
>
  <div
    class="emotion-1"
  >
    <textarea
      class="emotion-0"
      style="height:0"
      valid="error"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-1"
  >
    <textarea
      class="emotion-2"
      style="height:0"
      valid="warn"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-1"
  >
    <textarea
      class="emotion-4"
      style="height:0"
      valid="valid"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-1"
  >
    <textarea
      class="emotion-6"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;
